--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,9 @@
     --primarioOscuro: #89119D;
     --secundario: #FFCE00;
     --secundarioOscuro: rgb(233,287,2);
-    --blanco: #fff;
+    --blanco: #FFF;
     --negro: #000;
-
+    
     --fuentePrincipal: 'Staatliches', cursive;
 }
 
@@ -14,17 +14,17 @@ html {
     font-size: 62.5%;
 }
 
-*, *:before, *:after {
+  *, *:before, *:after {
     box-sizing: inherit;
 }
 
-/* Globales */
+/** Globales **/
 body {
     background-color: var(--primario);
     font-size: 1.6rem;
     line-height: 1.5;
 }
-p{
+p {
     font-size: 1.8rem;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--blanco);
@@ -32,10 +32,10 @@ p{
 a{
     text-decoration: none;
 }
-img{
+img {
     width: 100%;
 }
-.contenedor{
+.contenedor {
     max-width: 120rem;
     margin: 0 auto;
 }
@@ -44,20 +44,20 @@ h1, h2, h3 {
     color: var(--secundario);
     font-family: var(--fuentePrincipal);
 }
-h1{
+h1 {
     font-size: 4rem;
 }
-h2{
-    font-size: 3.2em;
+h2 {
+    font-size: 3.2rem;
 }
-h3{
+h3 {
     font-size: 2.4rem;
 }
 
 /** Header **/
 .header {
-    display: flex;
-    justify-content: center;
+display: flex;
+justify-content: center;
 }
 .header__logo {
     margin: 3rem 0;
@@ -73,6 +73,7 @@ h3{
     text-align: center;
     font-size: 2.2rem;
 }
+
 /** Navegación **/
 .navegacion {
     background-color: var(--primarioOscuro);
@@ -85,20 +86,20 @@ h3{
     font-family: var(--fuentePrincipal);
     color: var(--blanco);
     font-size: 3rem;
-}
+} 
 .navegacion__enlace--activo,
 .navegacion__enlace:hover {
     color: var(--secundario);
 }
 
-/** Grid **/
+/**Grid **/
 .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
 }
-@media (min-width: 768px) {
-    .grid{
+@media (min-width: 758px) {
+    .grid {
         grid-template-columns: repeat(3, 1fr);
     }
 }
@@ -107,10 +108,8 @@ h3{
     background-color: var(--primarioOscuro);
     padding: 1rem;
 }
-
 .producto__nombre {
     font-size: 4rem;
-    color: var(--blanco);
 }
 .producto__precio {
     font-size: 2.8rem;
@@ -124,7 +123,7 @@ h3{
     line-height: 1.2;
 }
 
-/** Gráficos **/
+/** Graficos **/
 .grafico {
     min-height: 30rem;
     background-repeat: no-repeat;
@@ -138,25 +137,25 @@ h3{
 .grafico--node {
     background-image: url(../img/grafico2.jpg);
     grid-row: 8 / 9;
-}
 
-@media (min-width: 768px) {
+}
+@media (min-width:768px) {
     .grafico--node {
         grid-row: 5 / 6;
-        grid-column: 2 / 4;
+        grid-column: 2 / 4 ;
     }
 }
 
 /** Nosotros **/
 .nosotros {
     display: grid;
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(2, 1fr);
 }
 @media (min-width: 768px) {
     .nosotros {
         grid-template-columns: repeat(2, 1fr);
         column-gap: 2rem;
-    }
+}
 }
 .nosotros__imagen {
     grid-row: 1 / 2;
@@ -178,6 +177,7 @@ h3{
         grid-template-columns: repeat(4, 1fr);
     }
 }
+
 .bloque {
     text-align: center;
 }
@@ -185,7 +185,6 @@ h3{
 .bloque__titulo {
     margin: 0;
 }
-
 
 /** Página del producto **/
 @media (min-width: 768px) {
@@ -203,7 +202,7 @@ h3{
 }
 .formulario__campo {
     border: 1rem solid var(--primarioOscuro);
-    background-color: transparent;
+    background-color: var(--primario);
     color: var(--blanco);
     font-size: 2rem;
     font-family: Arial, Helvetica, sans-serif;
@@ -216,7 +215,7 @@ h3{
     font-size: 2rem;
     font-family: var(--fuentePrincipal);
     padding: 2rem;
-    transition: background-color .3 ease;
+    transition: background-color .3s ease;
     grid-column: 1 / 3;
 }
 .formulario__submit:hover {
